gcc/testsuite/g++.old-deja/g++.other/anon1.C
// { dg-do assemble  }

static union {
  union {
  };
}; // { dg-error "" } anonymous union with no members
